<resources>
    <string name="app_name">Chs Application</string>
    <string name="play_ad">充预交金</string>
    <string name="chs">医保卡结算</string>
    <string name="self">自费结算</string>
    <string name="card_hint">请输入后六位身份证号</string>
    <string name="his_hint">请输入住院号</string>
    <string name="welcome">欢迎使用床旁自助结算系统</string>
    <string name="home_tip">感谢使用床旁结算系统，我可以帮您进行自费结算，医保卡结算和充值预交金，您可以选择使用语音或者使用界面下面的小麦克风图标静音</string>
    <string name="self_tip">请输入住院号</string>
    <string name="check_btn">查询</string>
    <string name="selt_btn">开始结算</string>
    <string name="buda_btn">小票补打</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">返回</string>
</resources><!--
//感谢使用床旁结算系统，我可以帮您进行自费结算，医保卡结算和充值预交金，您可以选择使用语音或者使用界面下面的小麦克风图标静音-->
